relates to #178: insert commands per spec, added oerdered/unordered, better tests (#216)